--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,11 +43,11 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <% user = User.find_by(:id => session[:user_id]) %>
+        <% u = User.find_by(:id => session[:user_id]) %>
 
-        <% if user.present? %>
-          <li class="navbar-text">Hi, <%= user.first_name %>!</li>
-          <li><a href="/users/<%= user.id %>/show">My Profile</a></li>
+        <% if u.present? %>
+          <li class="navbar-brand">Hi, <%= u.name %>!</li>
+          <li><a href="/users/<%= u.id %>/show">My Profile</a></li>
           <li><a href="/logout">Sign Out</a></li>
         <% else %>
           <li><a href="/users/new">Sign Up</a></li>
