--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -4,9 +4,14 @@
     <title>Activity Index</title>
 </head>
 <body>
+
     <div class="page-header">
         <h3>All Activities</h3>
+        <div class="btn-group">
+            <button type="button" class="btn btn-success"><a href="/activities/new" style="color: white">New Activity </a></button>
+        </div>
     </div>
+
 
 <!-- Header Row -->
     <div class="row" style="border-left:5px solid white; padding-left:5px; border-right:5px solid white; padding-right:5px">
