--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -31,13 +31,10 @@
             <input name="age" type="integer" class="form-control input-md" placeholder="How old are you?">
           </div>
 
-<!-- Fix input type !!!
-######################
-################# -->
-
           <div class="form-group">
-            <label>Gender:</label>
-            <input name="gender" type="integer" class="form-control input-md" placeholder="??????????????">
+            <label>Gender:</label><br>
+            <input name="gender" type="radio" value=true>Male<br>
+            <input name="gender" type="radio" value=false>Female
           </div>
 
           <button type="submit" class="btn btn-success btn-md">Sign Me Up!</button>
