--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,7 @@
       <ul class="nav navbar-nav">
         <li><a href="/activities">Activities</a></li>
         <li><a href="/users">Athletes</a></li>
+        <li><a href="/communities">Communities</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
